--- a/src/SimpleDotNet.Framework/SimpleDotNet.Framework.csproj
+++ b/src/SimpleDotNet.Framework/SimpleDotNet.Framework.csproj
@@ -1,31 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\common.props" />
+
+	<PropertyGroup>
+		<RootNamespace></RootNamespace>
+	</PropertyGroup>
 	
 	<PropertyGroup>
 		<AssemblyName>SimpleDotNet.Framework</AssemblyName>
 		<PackageId>SimpleDotNet.Framework.Core</PackageId>
-		<Title>SimpleDotNet Framework</Title>
-		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-		<RootNamespace></RootNamespace>
+		<Title>SimpleDotNet Framework Core</Title>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<PackageIcon>logo-white.png</PackageIcon>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<None Include="..\..\README.md">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Include="..\..\LICENSE">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-	</ItemGroup>
+	
 	
 </Project>
